--- a/commerceApp/src/main/resources/messages.properties
+++ b/commerceApp/src/main/resources/messages.properties
@@ -1,1 +1,4 @@
+
 message.activationtoken=You have been registered successfully. Please check your email and click the link to confirm your account
+message.addnewnetadatafield=Invalid operation
+message.fieldalreadyexists=Field already exists
