--- a/commerceApp/src/main/resources/messages_fr.properties
+++ b/commerceApp/src/main/resources/messages_fr.properties
@@ -1,1 +1,3 @@
 message.activationtoken=Vous avez été enregistré avec succès. Veuillez vérifier votre e-mail et cliquez sur le lien pour confirmer votre compte
+message.addnewnetadatafield=Opération invalide
+message.fieldalreadyexists=Le champ existe déjà
