Internationalization added to more Apis

--- a/commerceApp/src/main/resources/messages.properties
+++ b/commerceApp/src/main/resources/messages.properties
@@ -2,3 +2,10 @@
 message.activationtoken=You have been registered successfully. Please check your email and click the link to confirm your account
 message.addnewnetadatafield=Invalid operation
 message.fieldalreadyexists=Field already exists
+message.invalidoperation=Invalid operation
+message.usernotfoundwiththegiventoken=No user found with the given token
+message.tokenexpire=token expired
+message.reactivationtoken=Your activation link has expired. We have sent a net link to your registered email
+message.accountactive=Your account is already active
+message.accountactivated=Your account has ben activated
+
