--- a/commerceApp/src/main/resources/messages_fr.properties
+++ b/commerceApp/src/main/resources/messages_fr.properties
@@ -1,3 +1,9 @@
 message.activationtoken=Vous avez été enregistré avec succès. Veuillez vérifier votre e-mail et cliquez sur le lien pour confirmer votre compte
 message.addnewnetadatafield=Opération invalide
 message.fieldalreadyexists=Le champ existe déjà
+message.invalidoperation=Opération invalide
+message.usernotfoundwiththegiventoken=Aucun utilisateur trouvé avec le jeton donné
+message.tokenexpire=jeton expiré
+message.reactivationtoken=Votre lien d'activation a expiré. Nous avons envoyé un lien net vers votre e-mail enregistré
+message.accountactive=Votre compte est déjà actif
+message.accountactivated=Votre compte a été activé
