authorization added to swagger

--- a/commerceApp/src/main/resources/messages.properties
+++ b/commerceApp/src/main/resources/messages.properties
@@ -8,4 +8,6 @@ message.tokenexpire=token expired
 message.reactivationtoken=Your activation link has expired. We have sent a net link to your registered email
 message.accountactive=Your account is already active
 message.accountactivated=Your account has ben activated
+message.notfound=Not found
+message.categorydoesnotexists=category with the given id does not exists
 
