--- a/commerceApp/src/main/resources/messages_fr.properties
+++ b/commerceApp/src/main/resources/messages_fr.properties
@@ -7,3 +7,5 @@ message.tokenexpire=jeton expiré
 message.reactivationtoken=Votre lien d'activation a expiré. Nous avons envoyé un lien net vers votre e-mail enregistré
 message.accountactive=Votre compte est déjà actif
 message.accountactivated=Votre compte a été activé
+message.notfound=Pas trouvé
+message.categorydoesnotexists=la catégorie avec l'id donné n'existe pas
