changes in cart

--- a/commerceApp/src/main/resources/messages.properties
+++ b/commerceApp/src/main/resources/messages.properties
@@ -10,4 +10,7 @@ message.accountactive=Your account is already active
 message.accountactivated=Your account has ben activated
 message.notfound=Not found
 message.categorydoesnotexists=category with the given id does not exists
+message.added=Added to cart
+message.notValid=Invalid Operation
+message.cardIdNotFound= Cart Id not found
 
